<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">I\'m busy, now.</string>
    <string name="block_rule_setting_activity">Reaction setting</string>
    <string name="pattern_setting_activity_label">Pattern setting</string>
    <string name="history_activity_label">Recent history</string>
    <string name="group_setting_activity_label">Group setting</string>
    <string name="suggestion_activity_label">Suggesetions</string>

    <string name="menu_action_log">Action log</string>
    <string name="menu_action_add">Add</string>

    <string-array name="menu_list_add">
        <item>Add pattern</item>
        <item>Add group</item>
    </string-array>

    <string-array name="menu_list_phonenumber_edit_widget">
        <item>Get number from contact</item>
        <item>Get number from call log</item>
    </string-array>

    <string name="add_number_button">Add</string>

    <string name="error_duplicate_number">Same number already exist in list.</string>
    <string name="error_while_pick_contact">Error while pick contact.</string>
    <string name="error_blank_number">Blank number can\'t be added.</string>
    <string name="error_wrong_number">Wrong number. Number can has digit, -, +, (, ) only.</string>
    <string name="error_duplicate_number_will_overwrite">Same number already exist in rule. Delete already existing rule and add this number here?</string>

    <string name="title_select_number">Select numbers to add.</string>
    <string name="error_blank_contact">Selected contact has no phone number.</string>

    <string name="setting_alias_name_description">Alias and number pattern. Touch to change.
    </string>
    <string name="setting_reject_call_title">Reject call</string>
    <string name="setting_reject_call_description">Reject call with this number.</string>
    <string name="setting_delete_call_log_title">Delete call log</string>
    <string name="setting_delete_call_log_description">If call comes from this number, delete that log.
    </string>
    <string name="setting_send_auto_sms_title">Send auto SMS</string>
    <string name="setting_send_auto_sms_description">If call comes from this number, automatically
        send SMS message.</string>
    <string name="setting_hint_auto_sms_editfield">"Insert auto message. Ex) Sorry, I'm busy now. I will call you soon."</string>
    <string name="setting_button_save">Save</string>
    <string name="setting_button_discard">Discard</string>
    <string name="setting_button_delete">Delete</string>

    <string name="setting_alias_dialog_title">Insert alias for this number.</string>
    <string name="setting_number_dialog_title">Insert number pattern which you want to manage.
    </string>

    <string name="pattern_unnamed">unnamed pattern</string>
    <string name="pattern">Pattern</string>

    <string name="pattern_setting_alias_description">Pattern\'s alias. Touch to edit.</string>
    <string name="pattern_setting_alias_hint">Pattern\'s alias. Touch to edit.</string>
    <string name="pattern_setting_alias_dialog_title">Insert alias for this pattern.</string>
    <string name="pattern_setting_startWith">Start with</string>
    <string name="pattern_setting_startWith_description">All numbers start with this.</string>
    <string name="pattern_setting_endWith">End with</string>
    <string name="pattern_setting_endWith_description">All numbers end with tihs.</string>
    <string name="pattern_setting_all">All numbers</string>
    <string name="pattern_setting_all_description">All numbers.</string>
    <string name="pattern_setting_exceptions">Exceptions</string>
    <string name="pattern_setting_exceptions_description">Exception numbers will ignored although in above condition.</string>

    <string name="save_changes_before_closing">Save changes before closing?</string>
    <string name="save_and_quit">Save and quit</string>
    <string name="quit_without_saving">Quit without saving</string>

    <string name="group_unnamed">unnamed group</string>
    <string name="group">Group</string>

    <string name="group_setting_alias_hint">Group\'s alias. Touch to edit.</string>
    <string name="group_setting_alias_description">Group\'s alias. Touch to edit.</string>
    <string name="group_setting_alias_dialog_title">Insert alias for this group.</string>
    <string name="group_setting_members">Members</string>

    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>

    <string name="hint_setting_alias">Alias. Touch to edit.</string>
    <string name="hint_setting_number">Number. Touch to edit.</string>

    <string name="record_from">"From <xliff:g id="name" example="Alice">%1$s</xliff:g>"</string>
    <string name="record_matched_rule">"Matched by <xliff:g id="matched_by" example="all_pattern">%s</xliff:g>"</string>
    <string name="record_rejected_call">Rejected call.</string>
    <string name="record_deleted_call_log">Deleted call log.</string>
    <string name="record_sent_auto_sms">Sent below auto SMS.</string>

    <string name="can_not_find_this_rule">can not find this rule. Maybe modified or deleted.</string>

    <string name="suggestion_add_dialog_title">Add suggestion</string>
    <string name="suggestion_edit_dialog_title">Edit suggestion</string>
    <string name="warning_suggestion_should_not_empty">Suggestion should not be empty.</string>

    <string name="manual_dialog_message">Will show how to use this app.</string>
    <string name="manual_url">https://docs.google.com/presentation/d/1l6RAZhD2lS_2rukdi7SMdRbuvoosOwoNhFBw2zDGRZI/edit</string>

    <string name="history_deleted">History deleted.</string>
    <string name="noti_actived">\'I\'m busy, now\' is working.</string>
</resources>
