<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_height="wrap_content"
        android:id="@+id/linearLayout1" android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView android:layout_height="wrap_content"
            android:id="@+id/alias_textView" android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"></TextView>
        <TextView android:layout_height="wrap_content"
            android:id="@+id/number_textView" android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"></TextView>
        <TextView android:text="@string/setting_alias_name_description"
            android:id="@+id/textView1" android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <ScrollView android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay" android:layout_weight="1">
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <View android:layout_height="2dp" android:layout_width="match_parent"
                android:background="#ff333333" android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <LinearLayout android:layout_height="wrap_content"
                android:id="@+id/linearLayout2" android:layout_width="match_parent"
                android:baselineAligned="true">
                <LinearLayout android:id="@+id/linearLayout4"
                    android:orientation="vertical" android:layout_width="0dp"
                    android:layout_weight="8" android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/setting_reject_call_title"
                        android:layout_height="wrap_content" android:id="@+id/rejectCallTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"></TextView>
                    <TextView android:text="@string/setting_reject_call_description"
                        android:layout_height="wrap_content"
                        android:id="@+id/rejectCallDescription"
                        android:layout_width="wrap_content"></TextView>
                </LinearLayout>
                <CheckBox android:layout_height="wrap_content"
                    android:text="" android:id="@+id/rejectCallcheckBox"
                    android:layout_width="0dp" android:layout_weight="1"></CheckBox>
            </LinearLayout>

            <View android:layout_height="2dp" android:layout_width="match_parent"
                android:background="#ff333333" android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <LinearLayout android:layout_height="wrap_content"
                android:id="@+id/linearLayout2" android:layout_width="match_parent"
                android:baselineAligned="true">
                <LinearLayout android:id="@+id/linearLayout4"
                    android:orientation="vertical" android:layout_width="0dp"
                    android:layout_weight="8" android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/setting_delete_call_log_title"
                        android:layout_height="wrap_content" android:id="@+id/rejectCallTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"></TextView>
                    <TextView
                        android:text="@string/setting_delete_call_log_description"
                        android:layout_height="wrap_content"
                        android:id="@+id/rejectCallDescription"
                        android:layout_width="wrap_content"></TextView>
                </LinearLayout>
                <CheckBox android:layout_height="wrap_content"
                    android:text="" android:id="@+id/deleteCallLogCheckBox"
                    android:layout_width="0dp" android:layout_weight="1"></CheckBox>
            </LinearLayout>

            <View android:layout_height="2dp" android:layout_width="match_parent"
                android:background="#ff333333" android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <LinearLayout android:layout_height="wrap_content"
                android:id="@+id/linearLayout2" android:layout_width="match_parent"
                android:baselineAligned="true">
                <LinearLayout android:id="@+id/linearLayout4"
                    android:orientation="vertical" android:layout_width="0dp"
                    android:layout_weight="8" android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/setting_send_auto_sms_title"
                        android:layout_height="wrap_content" android:id="@+id/rejectCallTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"></TextView>
                    <TextView
                        android:text="@string/setting_send_auto_sms_description"
                        android:layout_height="wrap_content"
                        android:id="@+id/rejectCallDescription"
                        android:layout_width="wrap_content"></TextView>
                </LinearLayout>
                <CheckBox android:layout_height="wrap_content"
                    android:text="" android:id="@+id/sendAutoSMSCheckBox"
                    android:layout_width="0dp" android:layout_weight="1"></CheckBox>
            </LinearLayout>
            <EditText android:layout_height="wrap_content"
                android:layout_marginTop="5dp" android:id="@+id/autoSMSeditText"
                android:layout_width="match_parent"
                android:hint="@string/setting_hint_auto_sms_editfield">
                <requestFocus></requestFocus>
            </EditText>

        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_height="wrap_content"
        android:id="@+id/linearLayout3" android:layout_width="match_parent"
        style="@android:style/ButtonBar" android:layout_gravity="bottom"
        android:baselineAligned="false">
        <Button android:id="@+id/save"
            android:layout_weight="1" android:text="@string/setting_button_save"
            android:layout_width="0dp" android:onClick="onSaveButtonClicked" android:layout_height="match_parent"></Button>
        <Button android:id="@+id/discard"
            android:layout_weight="1" android:text="@string/setting_button_discard"
            android:layout_width="0dp" android:onClick="onDiscardButtonClicked" android:layout_height="match_parent"></Button>
        <Button android:id="@+id/delete"
            android:layout_weight="1" android:text="@string/setting_button_delete"
            android:layout_width="0dp" android:onClick="onDeleteButtonClicked" android:layout_height="match_parent"></Button>
    </LinearLayout>



</LinearLayout>
