<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pattern_setting_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pattern_setting_alias_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/pattern_setting_name_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern_setting_alias_description" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- Start with -->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ff333333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/pattern_setting_startWith_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pattern_setting_startWith"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/pattern_setting_startWith_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="phone" >
                    </EditText>
                </LinearLayout>

                <TextView
                    android:id="@+id/pattern_setting_startWith_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_setting_startWith_description" />
            </LinearLayout>

            <!-- End with -->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ff333333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/pattern_setting_endWith_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pattern_setting_endWith"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/pattern_setting_endWith_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="phone" >
                    </EditText>
                </LinearLayout>

                <TextView
                    android:id="@+id/pattern_setting_endWith_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_setting_endWith_description" />
            </LinearLayout>

            <!-- All numbers -->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ff333333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/pattern_setting_all_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pattern_setting_all"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/pattern_setting_all_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <TextView
                    android:id="@+id/pattern_setting_all_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_setting_all_description" />
            </LinearLayout>

            <!-- Exceptions -->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ff333333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/pattern_setting_exceptions_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_setting_exceptions"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/pattern_setting_exceptions_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_setting_exceptions_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true" >

                    <org.clc.android.app.redbox.widget.PhoneNumberEditWidget
                        android:id="@+id/number_input_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >
                    </org.clc.android.app.redbox.widget.PhoneNumberEditWidget>

                    <Button
                        android:id="@+id/add_number_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:onClick="onAddNumberClicked"
                        android:text="@string/add_number_button" >
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pattern_setting_exceptions_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff333333"
                    android:orientation="vertical" />
            </LinearLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/block_action_setting" />
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/save_discard_delete_buttons" />

</LinearLayout>