<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="#ff333333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rejectCallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_reject_call_title"
                android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <TextView
                android:id="@+id/rejectCallDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_reject_call_description" >
            </TextView>
        </LinearLayout>

        <CheckBox
            android:id="@+id/rejectCallcheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" >
        </CheckBox>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="#ff333333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/deleteCallLogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_delete_call_log_title"
                android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <TextView
                android:id="@+id/deleteCallLogDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_delete_call_log_description" >
            </TextView>
        </LinearLayout>

        <CheckBox
            android:id="@+id/deleteCallLogCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" >
        </CheckBox>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="#ff333333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sendAutoSMSTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_send_auto_sms_title"
                android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <TextView
                android:id="@+id/sendAutoSMSDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_send_auto_sms_description" >
            </TextView>
        </LinearLayout>

        <CheckBox
            android:id="@+id/sendAutoSMSCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" >
        </CheckBox>
    </LinearLayout>

    <org.clc.android.app.redbox.widget.SmsEditWidget
        android:id="@+id/autoSMSeditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >
    </org.clc.android.app.redbox.widget.SmsEditWidget>
</LinearLayout>