<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/group_setting_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/group_setting_alias_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/group_setting_alias_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_setting_alias_description" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Exceptions -->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ff333333" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/group_setting_members_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_setting_members"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true" >

                    <org.clc.android.app.redbox.widget.PhoneNumberEditWidget
                        android:id="@+id/group_setting_number_input_widget"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >
                    </org.clc.android.app.redbox.widget.PhoneNumberEditWidget>

                    <Button
                        android:id="@+id/add_number_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:onClick="onAddNumberClicked"
                        android:text="@string/add_number_button" >
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/group_setting_members_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff333333"
                    android:orientation="vertical" />
            </LinearLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/block_action_setting" />
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/save_discard_delete_buttons" />

</LinearLayout>